Change name of blocks and change width-min

--- a/main_project/styles/style.css
+++ b/main_project/styles/style.css
@@ -3,7 +3,10 @@
 @import 'https://fonts.googleapis.com/css?family=Josefin+Sans';
 
 html, body {
-	min-width: 100%;
+    width: 100%;
+    min-width: 1100px;
+    max-width: 1920px;
+	/*min-width: 100%;*/
 	height: 100%;
 	font-family: "Open Sans", Arial, sans-serif;
 	font-weight: 300;
@@ -145,14 +148,14 @@ section>p {
 .portfolio-gallery-item {
 	display: inline-block;
 	width: 300px;
-	/*width: calc(25% - 4px);  - adaptive version*/
+	/*width: calc(25% - 4px); - adaptive version*/
 	overflow: hidden;
 	height: 300px;
 	margin-bottom: 2px;
 }
 .portfolio-gallery-item img {
 	/*max-width: 700px;
-	min-width: 350px; - вариант для адаптивной версии*/
+	min-width: 350px; - adaptive version*/
 }
 .portfolio-gallery-item a {
 	position: relative;
@@ -574,7 +577,6 @@ section>p {
 .last-post-info .button {
 	width: 126px;
     height: 33px;
-	margin-right: 210px;
 }
 /*Contacts*/
 .fa-map-marker {
